--- a/styleSidePanel.css
+++ b/styleSidePanel.css
@@ -7,16 +7,16 @@
     left: 0;
     background-color: #FFF7F1;
     overflow-x: hidden;
-    padding-top: 15px;
+    padding-top: 1em;
     transition: 0.25s;
 }
 
 /* The navigation menu links */
 .sidePanel a {
-    width: 300px;
-    padding: 8px 8px 8px 32px;
+    width: 20em;
+    padding: 0.5em 0.5em 0.5em 2em;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 90%;
     color: #74777E;
     display: block;
     transition: 0.25s;
@@ -34,9 +34,9 @@
 }
 
 .userBox {
-    border-radius: 50px;
-    width: 300px;
-    padding: 8px 8px 8px 8px;
+    border-radius: 3.5em;
+    width: 24em;
+    padding: 0.5em;
     display: inline-flex;
     align-items: center;
     color: #445270;
@@ -56,19 +56,18 @@
 
 .userBoxAvatar {
     pointer-events: none;
-    height: 50px;
-    width: 50px;
+    height: 3.5em;
+    width: 3.5em;
     vertical-align: middle;
 }
 
 .userBoxUsername {
-    font-size: 14px;
-    padding-left: 5px;
-    padding-right: 10px;
-    width: 250px;
+    font-size: 100%;
+    padding-left: 0.5em;
+    padding-right: 1em;
     pointer-events: none;
     color: inherit;
-    width: 230px;
+    width: 20em;
     overflow-wrap: break-word;
 }
 
@@ -91,8 +90,8 @@
     transition: 0.25s;
 
     position: fixed;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
 }
 
 #sidePanelButton:hover {
@@ -100,16 +99,16 @@
 }
 
 .sidePanel ul {
-    margin-top: 0px;
-    margin-left: 10px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-left: 0.5em;
+    margin-bottom: 0;
     list-style: none;
     text-indent: -1.2em;
 }
 
 .sidePanel li {
-    width: 200px;
-    font-size: 12px;
+    width: 18em;
+    font-size: 90%;
     text-decoration: none;
     border: none;
     cursor: pointer;
@@ -135,8 +134,8 @@
     display: none;
     position: absolute;
     background-color: #FFF7F1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    min-width: 10em;
+    box-shadow: 0 0.5em 1em 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -148,7 +147,7 @@
 
 .userBoxDropdownContent a {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 90%;
     color: #74777E;
     display: block;
     overflow-wrap: break-word;
@@ -164,4 +163,3 @@
 .show {
     display: block;
 }
-
