--- a/styleSidePanel.css
+++ b/styleSidePanel.css
@@ -1,6 +1,7 @@
 .sidePanel {
     height: 100%;
     width: 0;
+    max-width: 20em;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -36,6 +37,7 @@
 .userBox {
     border-radius: 3.5em;
     width: 24em;
+    max-width: 100%;
     padding: 0.5em;
     display: inline-flex;
     align-items: center;
